link all the page together

--- a/Client/css/order-confirmation.css
+++ b/Client/css/order-confirmation.css
@@ -275,6 +275,11 @@ body {
     transition: all 0.3s ease;
 }
 
+a:link{
+    text-decoration: none;
+
+}
+
 .primary-action {
     background-color: #3498db;
     color: white;
