--- a/Admin/css/styles.css
+++ b/Admin/css/styles.css
@@ -433,6 +433,7 @@ pre {
     font-size: 0.875em
 }
 
+
 pre code {
     font-size: inherit;
     color: inherit;
@@ -2930,7 +2931,7 @@ progress {
 
 .form-control {
     display: block;
-    width: 100%;
+    width: 60%;
     padding: 8px 16px;
     font-size: 0.875rem;
     font-weight: 400;
@@ -2950,6 +2951,22 @@ progress {
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out
 }
+.form-group-inline {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;    
+}
+
+.form-group-inline .form-label {
+    min-width: 150px;
+    margin-bottom: 0;
+}
+
+.form-group-inline .form-control {
+    flex: 1;
+}
+
 
 @media (prefers-reduced-motion:reduce) {
     .form-control {
