--- a/Client/css/order-confirmation.css
+++ b/Client/css/order-confirmation.css
@@ -138,7 +138,7 @@ body {
 
 .product-price {
     font-weight: 600;
-    color: #3498db;
+    color: #088178;
 }
 
 .product-meta {
@@ -183,7 +183,7 @@ body {
     margin-right: 15px;
     width: 40px;
     height: 40px;
-    background-color: #3498db;
+    background-color: #088178;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -241,7 +241,7 @@ body {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #3498db;
+    background-color: #088178;
     z-index: 1;
 }
 
@@ -281,19 +281,19 @@ a:link{
 }
 
 .primary-action {
-    background-color: #3498db;
+    background-color: #088178;
     color: white;
     border: none;
 }
 
 .primary-action:hover {
-    background-color: #2980b9;
+    background-color: #088178;
 }
 
 .secondary-action {
     background-color: white;
-    color: #3498db;
-    border: 1px solid #3498db;
+    color: #088178;
+    border: 1px solid #088178;
 }
 
 .secondary-action:hover {
